arma-rs/tests/derive/struct_fail_tuple_default.stderr
error: #[arma(default)] can only be used on structs with named fields
 --> tests/derive/struct_fail_tuple_default.rs:3:10
  |
3 | #[derive(FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[arma(default)] can only be used on structs with named fields
 --> tests/derive/struct_fail_tuple_default.rs:7:10
  |
7 | #[derive(FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)
